2.77 "Select Random" is broken #47969

Closed
opened 2016-03-27 22:27:44 +02:00 by martin me · 13 comments

System Information
Win7 64bit, Geforce 960

Blender Version
Broken: 2.77
Worked: in previous versions

Short description of error
"Select Random" selects the same objects(in Object Mode) / elements(in Edit Mode), over and over again.

**System Information** Win7 64bit, Geforce 960 **Blender Version** Broken: 2.77 Worked: in previous versions **Short description of error** "Select Random" selects the same objects(in Object Mode) / elements(in Edit Mode), over and over again.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @martinme

Added subscriber: @martinme

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2016-03-28 08:28:33 +02:00

This is because its always using the same random seed, change the seed if its important to get different results each time.

This is because its always using the same random seed, change the seed if its important to get different results each time.
Author

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Author

In earlier Blender versions "Select Random" works without having to choose a different seed for each new "Select Random" operation.
Looks like before "Randomize Timer" was used but now it's simply just "Randomize".
In my eys absolutely inadequate for this select function.
If I want to select randomly I don't want to select the same as before !
For that I would hit "Select The Same Again" what would be totaly nonsense.

In earlier Blender versions "Select Random" works without having to choose a different seed for each new "Select Random" operation. Looks like before "Randomize Timer" was used but now it's simply just "Randomize". In my eys absolutely inadequate for this select function. If I want to select randomly I don't want to select the same as before ! For that I would hit "Select The Same Again" what would be totaly nonsense.
Author

Sorry, I mean, I can't imagine a situation where it would make sence.

Sorry, I mean, I can't imagine a situation where it would make sence.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 28ca3ebc5f

This issue was referenced by 28ca3ebc5f81347cad53f9a8b946166f469fa7da

Added subscriber: @PeterBoos

Added subscriber: @PeterBoos

There is a good reason for it.
As for now you like something pure random.
But maybe sometime, you or someone elese like a result and would like to repeat it
That wouldnt be possible if the random wasnt seed based.
Well all computer random number generates use a see, (results are put back to buildup newer pseudo numbers on.
So basicly each seed, a group of numbers.
Such group who look randomly but follow a pattern as set by a seed value are also used in games

There is a good reason for it. As for now you like something pure random. But maybe sometime, you or someone elese like a result and would like to repeat it That wouldnt be possible if the random wasnt seed based. Well all computer random number generates use a see, (results are put back to buildup newer pseudo numbers on. So basicly each seed, a group of numbers. Such group who look randomly but follow a pattern as set by a seed value are also used in games

Now the number is incremented each time. So if you want to repeat a random selection, you can set it back one (or remember the number).

Now the number is incremented each time. So if you want to repeat a random selection, you can set it back one (or remember the number).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47969
No description provided.