Fix T47969: Select Random always uses same seed

Increment the seed on each use,
otherwise calling again selects the same order, unless you manually adjust the seed.