source/blender/editors/mesh/editmesh_select.c
@@ -3588,7 +3588,7 @@ static int edbm_select_random_exec(bContext *C, wmOperator *op)
 	BMEditMesh *em = BKE_editmesh_from_object(obedit);
 	const bool select = (RNA_enum_get(op->ptr, "action") == SEL_SELECT);
 	const float randfac =  RNA_float_get(op->ptr, "percent") / 100.0f;
-	const int seed = RNA_int_get(op->ptr, "seed");
+	const int seed = WM_operator_properties_select_random_seed_increment_get(op);
 
 	BMIter iter;
 
