source/blender/editors/metaball/mball_edit.c
@@ -373,7 +373,7 @@ static int select_random_metaelems_exec(bContext *C, wmOperator *op)
 	MetaElem *ml;
 	const bool select = (RNA_enum_get(op->ptr, "action") == SEL_SELECT);
 	const float randfac = RNA_float_get(op->ptr, "percent") / 100.0f;
-	const int seed = RNA_int_get(op->ptr, "seed");
+	const int seed = WM_operator_properties_select_random_seed_increment_get(op);
 	
 	RNG *rng = BLI_rng_new_srandom(seed);
 
