source/blender/editors/object/object_lattice.c
@@ -194,7 +194,7 @@ static int lattice_select_random_exec(bContext *C, wmOperator *op)
 	Lattice *lt = ((Lattice *)obedit->data)->editlatt->latt;
 
 	const float randfac = RNA_float_get(op->ptr, "percent") / 100.0f;
-	const int seed = RNA_int_get(op->ptr, "seed");
+	const int seed = WM_operator_properties_select_random_seed_increment_get(op);
 	const bool select = (RNA_enum_get(op->ptr, "action") == SEL_SELECT);
 
 	RNG *rng = BLI_rng_new_srandom(seed);
