source/blender/windowmanager/intern/wm_operator_props.c
@@ -174,6 +174,20 @@ void WM_operator_properties_select_random(wmOperatorType *ot)
 	WM_operator_properties_select_action_simple(ot, SEL_SELECT);
 }
 
+int WM_operator_properties_select_random_seed_increment_get(wmOperator *op)
+{
+	PropertyRNA *prop = RNA_struct_find_property(op->ptr, "seed");
+	int value = RNA_property_int_get(op->ptr, prop);
+
+	if (op->flag & OP_IS_INVOKE) {
+		if (!RNA_property_is_set(op->ptr, prop)) {
+			value += 1;
+			RNA_property_int_set(op->ptr, prop, value);
+		}
+	}
+	return value;
+}
+
 void WM_operator_properties_select_all(wmOperatorType *ot)
 {
 	WM_operator_properties_select_action(ot, SEL_TOGGLE);
